--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
         "react-syntax-highlighter": "^15.6.1",
+        "three": "^0.174.0",
         "web-vitals": "^3.3.1"
     },
     "scripts": {
